<resources>
    <string name="app_name">Updoot</string>

    <!--submissions sorting by -->
    <string name="Hot">Hot</string>
    <string name="Top">Top</string>
    <string name="New">New</string>
    <string name="Rising">Rising</string>
    <string name="Controversial">Controversial</string>
    <string name="Best">Best</string>

    <!--submission sorting by time-->
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="all_time">All Time</string>


    <string name="thumbnailDescription">Submission Thumbnail</string>
    <string name="sorting_mode">Sorting Mode</string>
    <string name="settings">Settings</string>

    <string name="reloading">Reloading…</string>
    <string name="subreddit_icon">Subreddit icon</string>
    <string name="selftext_icon">Selftext icon</string>
    <string name="submission_image">Submission image</string>

    <string name="channel_name">General</string>
    <string name="Submission_cache_cleanup">Submissions cache cleanup</string>
    <string name="total_remove_submissions">Total :%1$d \nRemoved : %2$d \nRemaining : %3$d</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="drag_handle">Drag handle</string>
    <string name="menu_edit_button">Menu edit button</string>
    <string name="option_icon">Option icon</string>
    <string name="user_icon">User icon</string>
    <string name="requesting_user_name">Requesting username</string>
    <string name="subreddit_syncing">Syncing subscribed subreddits</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="sidebar">Sidebar</string>
    <string name="join">Join</string>
    <string name="post_view_type">Post View Type</string>
    <string name="subreddit_cache_removed">Subreddit cache removed</string>
    <string name="subreddit_removed_count">Removed :%1$d cached subreddits</string>
    <string name="single_thread_indicator">Single thread indicator</string>
    <string name="using_single_thread">Comments use single thread indicator</string>
    <string name="using_multiple_threads">Comments use multiple thread indicators</string>
    <string name="single_color_thread_indicator">Single color thread indicator</string>
    <string name="using_single_color_thread">Comments use single color thread</string>
    <string name="using_multiple_color_thread">Comments use multiple color threads</string>
    <string name="link_preview_icon">Link preview icon</string>
    <string name="exit_app">Exit the app?</string>
    <string name="sync_subscriptions">Sync Subscriptions</string>
    <string name="synced_count_subreddits">Synced %1$d subreddits</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="follow_system">Follow System</string>
    <string name="silver_award">Silver Award</string>
    <string name="gold_award">Gold Award</string>
    <string name="platinum_award">Platinum Award</string>
    <string name="leave">Leave</string>
    <string name="trending_subs">Subreddits Trending Today</string>
    <string name="subscriptions">Subscription</string>
    <string name="post_thumbnail">Post thumbnail</string>
    <string name="add_account">Add account</string>
</resources>