<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_comment_sort"
        android:icon="@drawable/ic_sort_icon_24dp"
        android:title="@string/sorting_mode"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/hot_item"
                android:title="@string/Hot" />

            <item
                android:id="@+id/best_item"
                android:title="@string/Best" />

            <item
                android:id="@+id/new_item"
                android:title="@string/New" />

            <item
                android:id="@+id/rising_item"
                android:title="@string/Rising" />

            <item android:title="@string/Controversial">
                <menu>
                    <item
                        android:id="@+id/controversial_hour_item"
                        android:title="@string/now" />

                    <item
                        android:id="@+id/controversial_day_item"
                        android:title="@string/today" />

                    <item
                        android:id="@+id/controversial_week_item"
                        android:title="@string/this_week" />

                    <item
                        android:id="@+id/controversial_month_item"
                        android:title="@string/this_month" />

                    <item
                        android:id="@+id/controversial_year_item"
                        android:title="@string/this_year" />

                    <item
                        android:id="@+id/controversial_all_time_item"
                        android:title="@string/all_time" />
                </menu>
            </item>

            <item android:title="@string/Top">
                <menu>
                    <item
                        android:id="@+id/top_hour_item"
                        android:title="@string/now" />

                    <item
                        android:id="@+id/top_day_item"
                        android:title="@string/today" />

                    <item
                        android:id="@+id/top_week_item"
                        android:title="@string/this_week" />

                    <item
                        android:id="@+id/top_month_item"
                        android:title="@string/this_month" />

                    <item
                        android:id="@+id/top_year_item"
                        android:title="@string/this_year" />

                    <item
                        android:id="@+id/top_all_time_item"
                        android:title="@string/all_time" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/side_bar_item"
        android:icon="@drawable/ic_side_bar"
        android:title="@string/sidebar"
        app:showAsAction="always" />
</menu>