<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/best"
        android:title="@string/Best"
        app:showAsAction="never" />
    <item
        android:id="@+id/hot"
        android:title="@string/Hot"
        app:showAsAction="never" />

    <item
        android:id="@+id/New"
        android:title="@string/New"
        app:showAsAction="never" />

    <item
        android:id="@+id/rising"
        android:title="@string/Rising"
        app:showAsAction="never" />

    <item
        android:id="@+id/controversial"
        android:title="@string/Controversial"
        app:showAsAction="never" />

    <item
        android:id="@+id/top"
        android:title="@string/Top"
        app:showAsAction="never" />
</menu>